# Evaluation_using_vllm_server

./: README.md  combined_serve_and_run.sh  dataset_load_and_process.ipynb  evaluation.ipynb  inference.py  pyproject.toml  실행스크립트들.sh
data/: logiqa_test_cot.csv  logiqa_test_direct.csv
result/: Qwen3-8B-logiqa_test_cot.csv  Qwen3-8B-logiqa_test_direct.csv
